Some UI tweaks and hotbar wrap fix

--- a/code/ui/InventorySlot.scss
+++ b/code/ui/InventorySlot.scss
@@ -11,6 +11,8 @@
         position: absolute;
         bottom: 8px;
         right: 8px;
+        font-familt: Roboto;
+        font-weight: bold;
         font-size: 24px;
         color: white;
     }
